# Open-Source_Retrieval_Toolkit_-RAG-

./: .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml  test_settings.yaml
data/: qrels.tsv  queries.tsv
data/raw/: sample1.txt  sample2.md
docker/: Dockerfile
docs/: Makefile  api.rst  architecture.rst  conf.py  index.rst  usage.rst
src/rag_toolkit/: __init__.py  api.py  api_chain.py  chains.py  chunker.py  cli.py  config.py  embedder.py  eval.py  graphs.py  index_store.py  lc_adapters.py  llm.py  loaders.py  logging.py  metrics.py  providers.py  retrieval.py
src/rag_toolkit/prompts/: qa.j2
tests/: test_chain_smoke.py  test_chunker.py  test_cli_smoke.py  test_embed_index.py  test_graph_smoke.py  test_retrieval_metrics.py
